--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ addons:
     - libreadline6-dev
     - libncurses5-dev
     - perl
+    - libboost-python-dev
 install:
-  - make -j2 -C epics-base
-  - make -j2 -C pvData
-  - make -j2 -C pvAccess
-  - make -j2 -C pva2pva
+  - make -j2 
 script: make -C pva2pva runtests
